fixed issue with header menus going behind side panel

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -56,7 +56,7 @@ feedback textarea {
 #map {
 	background-color: black;
 	position: fixed;
-	top:50px;
+	top:52px;
 	bottom: 0;
 	right: 0;
 	left: 0;
@@ -124,7 +124,7 @@ feedback textarea {
 /*basemap panel*/
 base-map-panel {
   position: absolute;
-  top: 50px;
+  top: 52px;
   right:300px;
   z-index: 100;
   background-color: rgba(60,60,60,0.8);
@@ -157,7 +157,7 @@ base-map-panel .collapse-panel.collapsed {
 /*tool panel*/
 tool-panel {
   position: absolute;
-  top: 50px;
+  top: 52px;
   left:0px;
   z-index: 10000;
 	color: white;
@@ -270,7 +270,7 @@ side-panel {
 }
 .ng-pageslide-right {
 	background: rgba(255,255,255,0);
-	z-index: 1000; position: fixed; width: 300px; height: 100%; overflow: hidden; transition-duration: 0.5s; -webkit-transition-duration: 0.5s; transition-property: width, height; -webkit-transition-property: width, height; top: 50px !important; bottom: 0px; right: 0px;
+	z-index: 1000; position: fixed; width: 300px; height: 100%; overflow: hidden; transition-duration: 0.5s; -webkit-transition-duration: 0.5s; transition-property: width, height; -webkit-transition-property: width, height; top: 52px !important; bottom: 0px; right: 0px;
 	}
 .panel-default > .panel-heading {
   background: rgb(84,134,50);
